qlc/cpp/ql.h

  QlOvernightIndexedSwap* DLLEXPORT qlOvernightIndexedSwap(int type, double nominal, Schedule* schedule, double fixedRate, DayCounter* fixedDC, QlOvernightIndex* overnightIndex, double spread, char **e);
  QlOvernightIndexedSwap* DLLEXPORT qlOvernightIndexedSwap1(int type, unsigned nominalsLen, double* nominals, Schedule* schedule, double fixedRate, DayCounter* fixedDC, QlOvernightIndex* overnightIndex, double spread, char **e);
  Leg* DLLEXPORT qlOvernightIndexedSwapOvernightLeg(QlOvernightIndexedSwap* o, char **e);
  double DLLEXPORT qlOvernightIndexedSwapOvernightLegBPS(QlOvernightIndexedSwap* o, char **e);
  double DLLEXPORT qlOvernightIndexedSwapOvernightLegNPV(QlOvernightIndexedSwap* o, char **e);